2015-01-26  Alexey Proskuryakov  <ap@apple.com>

        Leaks bot shouldn't run JSC tests
        https://bugs.webkit.org/show_bug.cgi?id=140877

        Reviewed by Darin Adler.

        Shaves off 48 minutes of time.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
        (TestLeaksFactory): Slim down the leaks queue.

        * BuildSlaveSupport/build.webkit.org-config/mastercfg_unittest.py:
        * Scripts/webkitpy/port/ios.py:
        (IOSSimulatorPort.print_leaks_summary):
        * Scripts/webkitpy/port/mac.py:
        (MacPort.print_leaks_summary):
        Don't yell when leaks are detected.

2015-01-26  Csaba Osztrogonác  <ossy@webkit.org>

        Refactor run-javascriptcore-tests
        https://bugs.webkit.org/show_bug.cgi?id=140824

        Reviewed by Darin Adler.

        Separated mozilla, stress test code paths and
        determining skipped mozilla tests into subroutines.

        * Scripts/run-javascriptcore-tests:
        (runMozillaTests):
        (runJSCStressTests):
        (defaultJsDriverArgsForMozillaTests):

2015-01-26  Csaba Osztrogonác  <ossy@webkit.org>

        [buildbot] Fix grammar of TestWithFailureCount
        https://bugs.webkit.org/show_bug.cgi?id=140884

        Reviewed by Alexey Proskuryakov.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
        (TestWithFailureCount):
        (TestWithFailureCount.commandComplete):
        (TestWithFailureCount.getText2):
        (RunUnitTests):
        (RunPythonTests):
        (RunPerlTests):
        (RunLLINTCLoopTests):
        (Run32bitJSCTests):
        * BuildSlaveSupport/build.webkit.org-config/mastercfg_unittest.py:
        (RunLLINTCLoopTestsTest.test_failure):
        (Run32bitJSCTestsTest.test_failure):
        (RunUnitTestsTest.assertFailures):

2015-01-26  Youenn Fablet  <youenn.fablet@crf.canon.fr>

        Unreviewed. Moving myself to the committer section.

        * Scripts/webkitpy/common/config/contributors.json:
