@@ -1,5 +1,11 @@
 2015-01-26  Alexey Proskuryakov  <ap@apple.com>
 
+        Update bot assignments.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+
+2015-01-26  Alexey Proskuryakov  <ap@apple.com>
+
         Leaks bot shouldn't run JSC tests
         https://bugs.webkit.org/show_bug.cgi?id=140877
 
